fix flash stretching with menu expand

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -97,6 +97,7 @@ html, body
     color: $darkgray
 
   nav.top
+    margin-bottom: 5%
     @media screen and (min-width: $screen-md)
       ul
         margin-top: -55px
